# bailuwan

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
abstract-machine/: Makefile
abstract-machine/am/include/: amdev.h
abstract-machine/klib/src/: stdio.c  stdlib.c  string.c
abstract-machine/scripts/: riscv32e-branchsim.mk  riscv32e-cachesim.mk  riscv32e-ysyxsoc.mk
abstract-machine/scripts/platform/: branchsim.mk  cachesim.mk  nemu.mk  npc.mk  ysyxsoc.mk
nemu/: Kconfig  Makefile
nemu/include/: common.h  debug.h  difftest-def.h  isa.h  macro.h  utils.h
nemu/include/cpu/: decode.h  (+1 more)
nemu/scripts/: native.mk
nemu/src/: nemu-main.c
npc/: .gitignore  LICENSE  Makefile  README.md  build.mill  parse_statistics.py
npc/cachesim/: cachesim.cpp  cachesim.hpp  icachesim.cpp  icachesim.hpp  main.cpp
npc/csrc/: CMakeLists.txt
npc/csrc/common/: common.cpp  common.h  config.hpp  cpu_proxy.cpp  cpu_proxy.hpp  disasm.cpp  disasm.hpp  dpic.cpp  dpic.h  dpic.hpp  dut_proxy.cpp  dut_proxy.hpp  libcapstone.so.5  macro.h  macro.hpp  riscv32-nemu-interpreter-so  trace.cpp  trace.h  trace.hpp
npc/csrc/common/lib/: riscv32-nemu-interpreter-so
npc/csrc/common/utils/: disasm.cpp  disasm.hpp  macro.hpp
npc/csrc/debug/: macro.h  main.cpp  minirvemu.hpp
npc/csrc/fast/: main.cpp
npc/csrc/nvboard/: main.cpp  top.nxdc
npc/csrc/sdb/: breakpoint.cpp  config.hpp  cpu-exec.cpp  difftest.cpp  elf.c  elf.cpp  expr.cpp  isa.cpp  main.cpp  sdb.hpp  watchpoint.cpp
npc/scripts/: debug.mk  fast.mk  nvboard.mk  sdb.mk
npc/vsrc/: top.v
workspace/minirv/: Makefile
(+212 files in other folders)
